# python-butler-cli

./: .butler-version  .pymarkdown  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.butler/: .gitignore  CHANGELOG.md  LICENSE  Makefile
.butler/claude-agents/: bug-triage.agent.md  characterization-test-writer.agent.md
.butler/templates/: bug-triage.agent.md.tmpl  copilot-instructions.md.tmpl  pr-reviewer.agent.md.tmpl  workflow-guardian.agent.md.tmpl
.claude/agents/: implementation-worker.agent.md  pr-reviewer.agent.md  requirements-drafter.agent.md  workflow-guardian.agent.md
.github/: copilot-instructions.md
.github/agents/: test-design-reviewer.agent.md  workflow-guardian.agent.md
docs/: REQUIREMENTS.md
docs/tasks/: TASK-001-cli-skeleton.md  TASK-002-add-init-project-target.md  TASK-002-daily-dev-commands.md  TASK-003-clarify-agent-invocation.md  TASK-004-gemini-code-assist-agents.md  TASK-004-readme-initial-commit-note.md  TASK-005-init-project-generate-pyproject.md  TASK-005-task-workflow-commands.md  TASK-006-add-tests-dir-variable.md  TASK-006-agent-sync-command.md  TASK-007-test-maintainability-sync-private-imports.md  TASK-008-ruff-line-length-100.md  TASK-008-test-granularity-split-multi-assert-tests.md  TASK-009-test-necessary-parametrize-output-tests.md  (+6 more)
scaffold/: .gitignore.tmpl  pyproject.toml.tmpl
templates/: CLAUDE.md.tmpl  characterization-test-writer.agent.md.tmpl  requirements-drafter.agent.md.tmpl  workflow-guardian.agent.md.tmpl
tests/: test_config.py  test_dev_commands.py  test_sync_command.py  test_task_commands.py
(+26 files in other folders)
